# playground

./: Cargo.toml  Makefile
.cargo/: config.toml
programs/pinocchio/: Cargo.toml
programs/pinocchio/src/: entrypoint.rs  lib.rs
tests/benches/: pinocchio.rs
tests/benches/setup/: mod.rs
