[package]
name = "pinocchio"
version = "0.1.0"
edition = "2021"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib"]

[dependencies]
pinocchio = { version = "0.9", default-features = false, git = "https://github.com/anza-xyz/pinocchio.git", branch = "febo/upstream-bpf" }
pinocchio-system = { version = "0.3", git = "https://github.com/anza-xyz/pinocchio.git", branch = "febo/upstream-bpf" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
