[package]
name = "pinocchio-program"
version = "0.1.0"
edition = "2021"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib"]

[dependencies]
pinocchio = { version = "0.9", default-features = false, git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-system = { version = "0.4", git = "https://github.com/anza-xyz/pinocchio.git" }
# Enable static syscalls for BPF target
solana-define-syscall = { version = "4.0.1", features = ["unstable-static-syscalls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
